
==========
13/07/2009
==========

- reader (bugfixes)
- implementacoes de layout do queue
- correcao de bug com webservice backend > aplicacao web

HORAS TRABALHADAS: 4h

==========
14/07/2009
==========

- queue editable

HORAS TRABALHADAS: 2h

==========
15/07/2009
==========

- queue deletable
- queue sortable

HORAS TRABALHADAS: 4h

==========
16/07/2009
==========

- publicacao automatica ok
- queue automatico ok
- intervalo de publicacao ok
- updater de publicacao automatica e auto enqueue

HORAS TRABALHADAS: 5h

==========
19/07/2009
==========

- correcoes no registry e configuration.xml
- inclusao do tempo de cache do feed no configuration.xml
- correcao da url do feed para melhorar a consultado cache de feed

HORAS TRABALHADAS: 3h

==========
20/07/2009
==========

- correcao na exibicao de data (simplificada e completa) do reader e queue
- correcao na gravacao e atualizacao do intervalo de publicacao
- inclusao de intervalo de tempo (margem) para a data de publicacao no
configuration.xml
- correcao na atualizacao da data de publicacao durante ordering
- correcao bugzID: 25 (toggle remover do queue no reader)
- implementacao de editor wysiwyg

HORAS TRABALHADAS: 8h

==========
21/07/2009
==========

- ajustes no editor wysiwyg

HORAS TRABALHADAS: 7h

==========
22/07/2009
==========

- ajustes no editor wysiwyg
- implemented: ao editar um blog a senha deve ter opcao de nao ser modificada (bugzId:18)
- smallfixes de exibicao de mensagem no cadastro do blog
- smallfixes no library/base/loader e no controller/dashboard

HORAS TRABALHADAS: 7h

==========
23/07/2009
==========

- smallfixes nos webservices
- documentacao dos webservices do frontend

HORAS TRABALHADAS: 4h

==========
26/07/2009
==========

- bugfixes no IE

HORAS TRABALHADAS: 3h

==========
27/07/2009
==========

- correcao de bug no botao 'adicionar ao queue'
- correcao de bug no codigo base (Registry)
- correcao de problemas com timezone no auto enqueue e publication

HORAS TRABALHADAS: 7h