@@ -254,6 +254,7 @@ CREATE TABLE model_user_blog_entry
     entry_content TEXT NOT NULL DEFAULT '',
     keywords TEXT NOT NULL DEFAULT '',
     publication_status ENUM('new','waiting','failed','published') NOT NULL DEFAULT 'new',
+    publication_lock TINYINT(1) NOT NULL DEFAULT 0, -- backend lock
     publication_date TIMESTAMP NOT NULL DEFAULT '1970-01-01 00:00:00',
     ordering SMALLINT UNSIGNED NOT NULL DEFAULT 1,
     created_at TIMESTAMP NOT NULL DEFAULT '1970-01-01 00:00:00',
